# rfm-architecture

./: .gitignore  CHANGELOG.md  LICENSE  README.md  animate_rfm.py  config.yaml  index.html  init_database.bat  init_database.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  requirements_dev.txt  run_animation.bat  run_animation.py  run_benchmarks.bat  run_benchmarks.py  run_client_test.py  run_premium_ui.bat  run_premium_ui.py  run_production_websocket_server.py  run_progress_test.py  run_secure_websocket_server.py  run_system_config.bat  run_system_config.py  run_viz.py  run_websocket_server.py  setup.sh  simple_websocket_server.py  spectacular_viz.py  tailwind.config.js  test_import.py  test_julia_sets.py  tsconfig.json  validate_config.bat  validate_config.py  vite.config.ts
rfm/: cli.py  (+3 more)
ui/: README.md  pyproject.toml  run_rfm_ui.bat
ui/rfm_ui/: __init__.py  main.py  websocket_client.py  websocket_client_enhanced.py
ui/rfm_ui/command_bus/: __init__.py  command.py  command_bus.py  command_history.py  decorators.py  registry.py
ui/rfm_ui/components/: __init__.py  anim_nodes.py  architecture_comparison.py  architecture_editor.py  button.py  fps_overlay.py  panel.py  parameter_explorer.py  preset_manager.py  progress_bar.py  progress_manager.py  progress_timeline.py  slider.py  system_config.py
ui/rfm_ui/config/: __init__.py
ui/rfm_ui/engine/: __init__.py  core.py
ui/rfm_ui/errors/: __init__.py  decorators.py  handler.py  registry.py  types.py
ui/rfm_ui/healing/: __init__.py  decorators.py  recovery.py  registry.py  strategies.py
ui/rfm_ui/performance/: __init__.py  tracker.py  visualizer.py
ui/rfm_ui/premium/: __init__.py  app.py  error_dashboard.py  (+1 more)
(+143 files in other folders)
